--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
     <h4>Top Scores</h4>
     <ul id="scores"></ul>
   </div>
+  <audio preload="auto" id="power-up" src="powerUp2.ogg"></audio>
+  <audio preload="auto" id="power-down" src="lowRandom.ogg"></audio>
+  <audio preload="auto" id="jump" src="phaseJump1.ogg"></audio>
+  
   <canvas></canvas>
-  <script src="game.ts"></script>
+  <script src="game.js"></script>
 </body>
 </html>
